--- a/index.html
+++ b/index.html
@@ -26,20 +26,14 @@
 <body>
     <div class="social-media-sidebar" data-aos="fade-right">
         <div class="sidebar-content">
-            <a href="https://github.com/workingPlock" target="_blank">
-                <i class="fa fa-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/" target="_blank">
-                <i class="fa fa-linkedin"></i>
-            </a>
-            <a href="https://twitter.com/" target="_blank">
-                <i class="fa fa-twitter"></i>
-            </a>
-            <a href="https://stackoverflow.com/" target="_blank">
+            <a href="https://stackoverflow.com/users/13096858/workingplock" target="_blank" data-toggle="tooltip" title="View my StackOverflow Account">
                 <i class="fa fa-stack-overflow"></i>
             </a>
-            <a href="https://www.instagram.com/" target="_blank">
-                <i class="fa fa-instagram"></i>
+            <a href="https://www.youtube.com/c/JackKimmins" target="_blank" data-toggle="tooltip" title="View my YouTube channel">
+                <i class="fa fa-youtube"></i>
+            </a>
+            <a href="https://github.com/workingPlock" target="_blank" data-toggle="tooltip" title="View my GitHub Profile">
+                <i class="fa fa-github"></i>
             </a>
         </div>
     </div>
