--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h1 data-aos="fade-up">Hello, my name is</h1>
             <h2 data-aos="fade-up">Jack Kimmins</h2>
             <h3 data-aos="fade-up">I've worked with <span id="workedWith"></span></h3>
-            <p data-aos="fade-up">I am a University Student, Software Engineer and Web Developer based in the Southwest of England. Presently, I am striving to obtain a first-class honours degree in Computer Science, enabling me to progress to postgraduate education.</p>
+            <p data-aos="fade-up">I am a University Student, Software Engineer and Web Developer based in the Southwest of England. Presently, I am striving to obtain a first-class honours degree in Computing, enabling me to progress to postgraduate education.</p>
             <a data-aos="fade-up" class="btn btn-primary mt-4 shadow-sm" href="#projects">View my Projects</a>
         </section>
 
