--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ Website Designed and Developed by Jack Kimmins
     <meta property="og:image:width" content="942">
     <meta property="og:image:height" content="630">
 
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css" />
 </head>
@@ -61,6 +62,9 @@ Website Designed and Developed by Jack Kimmins
 <body>
     <div class="social-media-sidebar" data-aos="fade-right">
         <div class="sidebar-content">
+            <a href="https://blog.jackkimmins.com/" target="_blank" title="View my personal blog">
+                <img src="./img/JK.svg" alt="" width="22">
+            </a>
             <a href="https://stackoverflow.com/users/13096858/workingplock" target="_blank" title="View my StackOverflow Account">
                 <i class="fa fa-stack-overflow"></i>
             </a>
@@ -115,7 +119,10 @@ Website Designed and Developed by Jack Kimmins
             <h2 data-aos="fade-up">Jack Kimmins</h2>
             <h3 data-aos="fade-up">I've worked with <span id="workedWith"></span></h3>
             <p data-aos="fade-up">I am a University Student, Software Engineer and Web Developer based in the Southwest of England. Presently, I am striving to obtain a first-class honours degree in Computing, enabling me to progress to postgraduate education.</p>
-            <a data-aos="fade-up" class="btn mt-4 shadow-sm" href="#projects">View my Projects</a>
+            <div class="btn-group" role="group" data-aos="fade-up">
+                <a class="btn mt-4 shadow-sm" href="#projects">View my Projects</a>
+                <a class="btn mt-4 shadow-sm bg-secondary" href="https://blog.jackkimmins.com/">Read my Blog</a>
+            </div>
         </section>
 
         <section class="about-me p-4 p-md-0" id="about">
@@ -337,7 +344,11 @@ Website Designed and Developed by Jack Kimmins
             </div>
         </section>
 
-        <section class="photography p-4 p-md-0" id="photography">
+        <!-- <section class="photography p-4 p-md-0" id="photography">
+            <h4 class="mb-4 section-title" data-aos="fade-up">My Photography Portfolio</h4>
+        </section> -->
+
+        <section class="contact-me p-4 p-md-0" id="contact-me">
             <h4 class="mb-4 section-title" data-aos="fade-up">Contact Me</h4>
         </section>
 
@@ -347,7 +358,7 @@ Website Designed and Developed by Jack Kimmins
             <a data-aos="fade-up" class="btn" href="mailto:mail@jackkimmins.com">Send an Email</a>
         </section>
 
-        <footer>&copy; Jack Kimmins <script>document.write(new Date().getFullYear())</script> • All rights reserved.</footer>
+        <footer class="">&copy; Jack Kimmins <script>document.write(new Date().getFullYear())</script> • All rights reserved.</footer>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
