Changed my GitHub account info.

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@ Website Designed and Developed by Jack Kimmins
             <a href="https://www.youtube.com/c/JackKimmins" target="_blank" title="View my YouTube channel">
                 <i class="fa fa-youtube"></i>
             </a>
-            <a href="https://github.com/workingPlock" target="_blank" title="View my GitHub Profile">
+            <a href="https://github.com/JackKimmins" target="_blank" title="View my GitHub Profile">
                 <i class="fa fa-github"></i>
             </a>
         </div>
     </div>
 
     <div class="quick-links-footer">
-        <a href="https://github.com/workingPlock" target="_blank" title="View my GitHub">workingPlock <i class="fa fa-github"></i></a>
+        <a href="https://github.com/JackKimmins" target="_blank" title="View my GitHub">GitHub/JackKimmins <i class="fa fa-github"></i></a>
         <a href="mailto:mail@jackkimmins.com" title="Click to send me an email">mail@jackkimmins.com <i class="fas fa-at"></i></a>
     </div>
 
