CSS and Content Tweaks

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@ Website Designed and Developed by Jack Kimmins
                         <div data-aos="fade-up" class="project h-100">
                             <header>
                                 <img data-src="./img/project-icons/offendermetre.png" alt="Offendermetre Logo">
+                                <a href="https://github.com/jackkimmins/OffendermetreDiscord" target="_blank"><img src="./img/openGitHub.svg" title="Open GitHub Repo" alt="Open GitHub Icon"></a>
                             </header>
     
                             <h4>Offendermetre</h4>
@@ -367,7 +368,7 @@ Website Designed and Developed by Jack Kimmins
     <script src="https://kit.fontawesome.com/eb87865935.js" crossorigin="anonymous"></script>
     <script src="./js/jquery.lazy.min.js"></script>
     <script src="./js/typeit.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script defer src="./js/main.js"></script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-37VF11FVLV"></script>
     <script>
