--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Website Designed and Developed by Jack Kimmins
                         <div class="text pt-4 pt-md-0">
                             <p data-aos="fade-up">Hello, my name is <strong>Jack Kimmins</strong>. I am passionate about building things and, more importantly, finding innovative ways to solve existing problems. Throughout the years, the world of computing has always inspired me due to the vast variety and the endless possibilities from every unique area of the subject.</p>
                             <p data-aos="fade-up">However, my primary interest in computing would certainly be programming/scripting. I gain great satisfaction from creating desktop and web applications, linking them with a database and designing beautiful UIs to complement their backends. A few of my favourite ventures are listed below in the <a href="#projects">projects segment</a>.</p>
-                            <p data-aos="fade-up">After graduating with a degree in Computing, I aim to acquire a master's degree in Computer Science and to continue my own endeavours to learn more about this fantastic subject, both in my personal time and in different work placements throughout the coming years.</p>
+                            <p data-aos="fade-up">After graduating with a degree in Computing, I aim to acquire a master's degree and to continue my own endeavours to learn more about this fantastic subject, both in my personal time and in different work placements throughout the coming years.</p>
                             <p data-aos="fade-up">Here are a few technologies I am the most familiar with:</p>
                         </div>
 
